ibuilder/tests/not_compile/empty_struct.stderr
error: structs with unnamed fields must have only one field
 --> $DIR/empty_struct.rs:4:8
  |
4 | struct Empty1;
  |        ^^^^^^

error: structs with unnamed fields must have only one field
 --> $DIR/empty_struct.rs:7:8
  |
7 | struct Empty2();
  |        ^^^^^^

error: the struct must have at least one field
  --> $DIR/empty_struct.rs:10:8
   |
10 | struct Empty3 {}
   |        ^^^^^^
